@@ -1,5 +1,9 @@
 2007-06-05  Andreas Røsdal  <andreasr@gnome.org>
 
+	* gnome_sudoku.py: Rearrage meny items to be more logically organized. 
+
+2007-06-05  Andreas Røsdal  <andreasr@gnome.org>
+
 	* gnome_sudoku.py: Disable saving and loading, because of all the 
 	crashes reported to these features.
 
